--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
             "email": "andre.tatibano@gmail.com"
         }
     ],
-    "require": {},
+    "require": {
+        "squizlabs/php_codesniffer": "^3.5"
+    },
     "autoload": {
         "psr-4": {
             "Src\\": "src",
